--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,7 @@
         <sshd.version>2.12.1</sshd.version><!-- @sync io.quarkus:quarkus-bom:${quarkus.version} dep:org.apache.sshd:sshd-common -->
         <unboundid-ldapsdk.version>7.0.2</unboundid-ldapsdk.version>
         <wiremock.version>3.12.1</wiremock.version>
+        <xmlunit.version>2.10.0</xmlunit.version>
         <zt-exec.version>1.12</zt-exec.version>
 
         <!-- Tooling dependency versions (keep sorted alphabetically) -->
