--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -28,8 +28,8 @@ asciidoc:
     requires: "'util=camel-website-util,quarkus=xref:js/quarkus.js'"
 
     # Project versions
-    camel-version: 4.10.2 # replace ${camel.version}
-    camel-docs-version: 4.10.x
+    camel-version: 4.11.0 # replace ${camel.version}
+    camel-docs-version: next
     camel-quarkus-version: 3.22.0 # replace ${camel-quarkus.version}
     quarkus-version: 3.21.0 # replace ${quarkus.version}
     graalvm-version: 23.1.2 # replace ${graalvm.version}
@@ -39,7 +39,7 @@ asciidoc:
     target-maven-version: 3.9.9 # replace ${target-maven-version}
 
     # Attributes used in xrefs to other Antora components
-    cq-camel-components: components
+    cq-camel-components: next@components
     doc-link-icon-lock: "icon:lock"
     quarkus-examples-version: latest
 
