--- a/extensions-jvm/pom.xml
+++ b/extensions-jvm/pom.xml
@@ -62,6 +62,7 @@
         <module>google-functions</module>
         <module>guava-eventbus</module>
         <module>huaweicloud-smn</module>
+        <module>ibm-secrets-manager</module>
         <module>iec60870</module>
         <module>ignite</module>
         <module>irc</module>
